--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: Zheng WANG's Homepage
+page-top-title:  
+top-section-bg-text: Zheng WANG
+home-subtitle: Zheng WANG&ensp;|&ensp;王 铮
+# copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
