--- a/contents/config.yml
+++ b/contents/config.yml
@@ -2,4 +2,4 @@ title: Zheng WANG's Homepage
 page-top-title:  
 top-section-bg-text: Zheng WANG
 home-subtitle: Zheng WANG&ensp;|&ensp;王 铮
-# copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
