--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Zheng WANG's Homepage
-page-top-title:  
+page-top-title: Exploring the magic world!
 top-section-bg-text: Zheng WANG
 home-subtitle: Zheng WANG&ensp;|&ensp;王 铮
 copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
