--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Zheng WANG's Homepage
-page-top-title: Exploring the magic world!
-top-section-bg-text: Zheng WANG
-home-subtitle: Zheng WANG&ensp;|&ensp;王 铮
-copyright-text: '&copy; Sen Li 2023-2024. All Rights Reserved.'
+title: WANG, Zheng's Homepage
+page-top-title: Exploring AI & Building the Future
+top-section-bg-text: WANG, Zheng
+home-subtitle: WANG, Zheng&ensp;|&ensp;王 铮
+copyright-text: '&copy; WANG, Zheng 2023-2026. All Rights Reserved.'
